--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   width: 100%;
   margin: auto;
   max-width: 1600px;
+  overflow: hidden;
 }
 @media screen and (max-width: 768px) {
   .container {
