--- a/src/components/Services/Services.scss
+++ b/src/components/Services/Services.scss
@@ -15,6 +15,7 @@
             text-align:center;
             width: 100%;
             max-width:700px;
+            font-family: "Syne";
             margin: auto;
             margin-bottom: 40px;
 
