--- a/src/components/Swiper/Swiper.css
+++ b/src/components/Swiper/Swiper.css
@@ -37,9 +37,12 @@ body {
   display: block;
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  /* object-fit: cover; */
 }
 
+.swiper-pagination{
+  position: relative;
+}
 .swiper-pagination-bullet {
   width: 200px;
   margin: 6px !important;
@@ -50,6 +53,7 @@ body {
   font-size: 12px;
   color: #000;
   opacity: 1;
+  margin-top: 20px;
   background: rgba(0, 0, 0, 0.2);
 }
 
@@ -59,5 +63,16 @@ body {
 }
 
 .mySwiper{
-    height: 800px;
+    height: auto;
+}
+
+.swiper-wrapper{
+height: auto;
+}
+
+@media only screen and (max-width: 667px) {
+
+  .mySwiper{
+    height: auto;
+}
 }
