--- a/src/components/Content/storeContent/StoreContent.scss
+++ b/src/components/Content/storeContent/StoreContent.scss
@@ -65,7 +65,7 @@
         // align-items:flex-start;
 
         .text-heading {
-            display: flex;
+            // display: flex;
             flex-wrap: wrap;
             white-space: pre-wrap;
             color: var(--black);
@@ -77,7 +77,8 @@
 
             &[data-highlight] {
                 span {
-                    color: var(--primary);                }
+                    color: var(--primary);
+                                }
             }
         }
 
