--- a/src/App.css
+++ b/src/App.css
@@ -2,15 +2,15 @@
   width: 100%;
   margin: auto;
   max-width: 1600px;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 @media screen and (max-width: 768px) {
   .container {
     width: 100%;
   }
 
-  img {
+  /* img {
     width: 80%;
     height: auto;
-  }
+  } */
 }
