--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,5 +1,8 @@
 .header{
     display: flex;
+    position: sticky;
+    top: 0;
+    z-index: 1000; 
     justify-content: center;
     align-items: center;
     min-height:40px;
